# Spotipyne

./: .buildconfig  .editorconfig  README.md  TODO  build.sh  default.nix  meson.build  python3-pyxdg.json  python3-spotipy.json  python3-xdg.json  requirements.txt  xyz.merlinx.Spotipyne.json
data/: meson.build  xyz.merlinx.Spotipyne.appdata.xml.in  xyz.merlinx.Spotipyne.desktop.in  xyz.merlinx.Spotipyne.gschema.xml
po/: POTFILES  meson.build
src/: #window.ui#  backButton.py  config.py  contentDeck.py  coverArtLoader.py  cover_art_loader.py  libraryOverview.py  libraryOverview.ui  login.py  login.ui  main.py  meson.build  playbackState.py  searchOverview.py  searchOverview.ui  search_overview.py  simpleControls.py  simpleControls.ui  simple_controls.py  simple_controls.ui  spotify.py  spotifyGuiBuilder.py  spotifyPlayback.py  spotifyPlayer.py  spotify_gui_builder.py  spotify_playback.py  spotipyne.gresource.xml  spotipyne.in  window.py  window.ui  window.ui~
